[tool.poetry]
name = "agent_comparison"
version = "0.0.3"
description = "This library provides you with an easy way to orchestrate AI Agents and Swarms on SwarmZero"
authors = ["SwarmZero Team <info@swarmzero.ai>"]
readme = "README.md"
repository = "https://github.com/swarmzero/swarmzero"
homepage = "https://swarmzero.ai"